--- a/estilos.css
+++ b/estilos.css
@@ -345,6 +345,15 @@ footer p{
   margin-top:var(--espacios);
 }
 
+.cta{
+  display: inline-block;
+  text-decoration: none;
+  background-image: linear-gradient(45deg, #bd3ec9 0%, #b855ff 99%, #df66f7 100%);
+  padding: 12px 15px;
+  border-radius: 8px;
+  color: #fff;
+}
+
 @media screen and (max-width: 700px){
   .nav2{
     color: #fff;
